--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <!-- <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -29,17 +29,8 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <!-- <div data-netlify-identity-menu></div> -->
     <div id="root"></div>
-    <!-- Add a menu:
-       Log in / Sign up - when the user is not logged in
-       Username / Log out - when the user is logged in
-      -->
-    <div data-netlify-identity-menu></div>
-    
-    <!-- Add a simpler button:
-        Simple button that will open the modal.
-      -->
-    <div data-netlify-identity-button>Login with Netlify Identity</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
